# Hackathon-America

./: .gitignore  DEPLOYMENT.md  README.md  app.py  env.example  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_final.py  test_integration.py
.devcontainer/: devcontainer.json
data/processed/: all_players_processed.csv  all_players_processed.parquet  america_players.parquet  america_profile.parquet
data/results/: america_profile.json  america_recommendations.xlsx  america_recruitment_report.json  pca_feature_importance.json  team_pca_results.csv
notebooks/: Analisis_America_fit_final.ipynb  PCA.ipynb  Perfil_america.ipynb  Prueba1.ipynb  Recomendador_1.ipynb  analisis_1.ipynb  procesamiento_datos.ipynb
src/: __init__.py  config.py
src/models/: america_analysis.py  pca_analyzer.py  recommender.py  team_fit_analyzer.py  team_profiler.py  team_profiler_PCA.py
src/notebooks/: Untitled.ipynb
src/utils/: __init__.py  data_fetcher.py  data_loader.py  data_processor.py  statsbomb_config.py  visualizations.py
