[project]
name = "hackathon-america"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "statsbombpy>=1.16.0",
]